crate loot table update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -310,7 +310,7 @@
       - 菌杖
       - 真菌爪
       - 真菌枪
-      - 真菌回旋镖
+      - 真菌回旋爪
     2:
       items:
       - 发光蘑菇:25:35
@@ -326,7 +326,7 @@
       giveAllItems: false
       items:
       - 腐蚀之雨法杖
-      - 阴雷
+      - 完美黑暗
       - 影流喷射器
       - 沼泽之眼
     2:
@@ -336,6 +336,10 @@
       - 腐肉:15:20
       - 恶魔锭:15:20
       - 腐烂物质:30:40
+    3:
+      progressRequired: 血肉之墙
+      items:
+      - 诅咒焰:25:30
   骷髅王:
     1:
       items:
@@ -389,7 +393,7 @@
       giveAllItems: false
       items:
       - 冰寒神性
-      - 冰川之风
+      - 白霜弓
       - 雪崩
       - 冰晶风暴
     2:
@@ -482,71 +486,132 @@
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 亚特兰蒂斯
+      - 利维坦海潮枪
+      - 阿娜希塔琶音
+      - 翡翠之潮
     2:
       items:
-      - 魔能谐振仪
+      - 利维坦龙涎香
+      - 归一心元石
   白金星舰:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 极光爆破
+      - 星云鞭
+      - 极光烈焰
+      - 南极光羽
     2:
       items:
-      - 魔能谐振仪
+      - 星舰电池:12:16
+      - 星尘:30:40
+      - 坠星:20:30
   石巨人:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 疯狂飞斧
+      - 太阳石
+      - 石巨人之眼
     2:
       items:
-      - 魔能谐振仪
+      - 闪亮石
+      - 甲虫外壳:18:23
+      - 锯刃镐:1:1:0.3333
   瘟疫使者歌莉娅:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 疫病污染者
+      - 瘟疫狂潮
+      - 蜂巢发射器
+      - 蜂毒
+      - 瘟疫长枪
+      - 瘟疫毒刃
+      - 枯萎散播者
+      - 瘟疫法杖
+      - 燃料电池组
+      - 瘟疫控制器
     2:
       items:
-      - 魔能谐振仪
+      - 毒刺:4:8
+      - 瘟疫细胞罐:25:30
+      - 瘟疫装甲镀层:30:35
   光之女皇:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 夜光
+      - 星光
+      - 万花筒
+      - 日暮
     2:
       items:
-      - 魔能谐振仪
+      - 翱翔徽章
+      - 女皇之翼:1:1:0.1
   猪鲨公爵:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 泡泡枪
+      - 海啸弓
+      - 猪鲨链球
+      - 利刃台风
     2:
       items:
-      - 魔能谐振仪
+      - 猪鲨之翼:1:1:0.1
   毁灭魔像:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 斩首者
+      - 灭域者
+      - 血涌
+      - 地刺王法杖
     2:
+      giveAllItems: false
       items:
-      - 魔能谐振仪
+      - 血契:1:1:0.3333
+      - 血肉图腾:1:1:0.3333
+    3:
+      items:
+      - 维苏威阿斯:1:1:0.1
+      - 血肉晶簇
+    4:
+      progressRequired: 亵渎天神，普罗维登斯
+      items:
+      - 血炎晶核
+      - 死灵晶簇
   星神游龙:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 微波辐照
+      - 星辰溅散
+      - 星神圣护
+      - 流星雨
     2:
       items:
-      - 魔能谐振仪
+      - 星神隐壳
+      - 星尘:60:90
+      - 坠星:30:50
   月球领主:
     1:
       giveAllItems: false
       items:
-      - 过载凝胶发射器
+      - 月亮传送门法杖
+      - 七彩水晶法杖
+      - 彩虹猫之刃
+      - 泰拉悠悠球
+      - 狂星之怒
+      - 太空海豚机枪
+      - 喜庆弹射器
+      - 终极棱镜
+      - 月之耀斑
     2:
       items:
-      - 魔能谐振仪
+      - 天体洋葱
+      - 天界之翼
+      - 夜明矿:90:110
+      - 彩虹猫矿车:1:1:0.1
