summoning weapon config section

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -372,6 +372,7 @@
       - 发条突击步枪
       - 激光步枪
       - 鞭炮
+      - 黑鹰遥控器
     3:
       items:
       - 恶魔之心
@@ -490,6 +491,7 @@
       - 利维坦海潮枪
       - 阿娜希塔琶音
       - 翡翠之潮
+      - 畸变吞食者法杖
     2:
       items:
       - 利维坦龙涎香
