--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -520,6 +520,14 @@
     damageMulti: 15
   worth: 20000
   rarity: 1
+测试饰品-使用速度:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    useTime: 1
+  worth: 20000
+  rarity: 1
 镣铐:
   item: LEASH
   lore:
