minion AI update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -184,6 +184,10 @@
     drop:
         - "铜币:200:400:1"
         - "骨头:1:3:0.9807"
+        - "蓝月:1:1:0.0152"
+        - "钴盾:1:1:0.0152"
+        - "海蓝权杖:1:1:0.0152"
+        - "妖刀村正:1:1:0.0152"
         - "裁缝巫毒娃娃:1:1:0.0033"
     buffImmute:
         - "中毒"
@@ -829,3 +833,6 @@
 吮脑怪:
     buffInflict:
         - "阻塞|200|1"
+远古岩鲨:
+    buffInflict:
+        - "碎甲|30|0.33"
