--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -1007,7 +1007,7 @@
   minionName: 沙龙卷
 畸变吞食者法杖:
   type: SUMMON
-  damageType: Melee
+  damageType: Arrow
   minionName: 畸变吞食者
 反魂蝶:
   type: SUMMON
