wulfrum screwdriver and strike line function refactor

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -1058,6 +1058,9 @@ TNT:
     blockHitAction: thru
     gravity: 0
     liveTime: 25
+螺丝钉:
+    noGravityTicks: 0
+    liveTime: 60
 星云烈焰:
     gravity: 0
     autoTrace: true
