melee weapon update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -102,6 +102,7 @@
         - "铜币:600:1000:1"
         - "恶魔锄刀:1:1:0.015"
         - "向导巫毒娃娃:1:1:1"
+        - "剑锋之誓约:1:1:0.0667"
 恶魔:
     buffInflict:
         - "失明|600|0.33"
@@ -112,12 +113,14 @@
     drop:
         - "铜币:600:1000:1"
         - "恶魔锄刀:1:1:0.015"
+        - "剑锋之誓约:1:1:0.0667"
 骨蛇:
     buffImmute:
         - "燃烧"
         - "中毒"
     drop:
         - "铜币:2000:4000:1"
+        - "旧神之誓约:1:1:0.1429"
 地狱蝙蝠:
     buffImmute:
         - "燃烧"
