--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -115,6 +115,7 @@
     projectileSize: 0.5
     penetration: 999999
     blockHitAction: stick
+    liveTime: 999999
 坠星:
     projectileSize: 0.5
     penetration: 999999
@@ -601,9 +602,6 @@
     autoTrace: true
     isGrenade: true
     blastRadius: 2
-风刃:
-    projectileSize: 1
-    gravity: 0
 南瓜榴弹:
     isGrenade: true
     blastRadius: 1
@@ -987,25 +985,25 @@ TNT:
         - "破晓|800|1"
 火枪子弹:
     gravity: 0
-诅咒弹:
+陨星弹:
     gravity: 0
-    buffInflict:
-        - "咒火|140|1"
-毒液弹:
+    blockHitAction: bounce
+    bounce: 2
+    penetration: 2
+    bouncePenetrationBonded: true
+银子弹:
     gravity: 0
-    buffInflict:
-        - "剧毒|200|1"
+爆炸弹:
+    gravity: 0
+    isGrenade: true
+    blastRadius: 0.75
+    blastDamageShooter: true
 绿藻弹:
     gravity: 0
     autoTrace: true
     autoTraceAbility: 8.0
     trailColor: "100|255|100"
     trailStepSize: 1.5
-爆炸弹:
-    gravity: 0
-    isGrenade: true
-    blastRadius: 0.75
-    blastDamageShooter: true
 水晶子弹:
     gravity: 0
     clusterBomb:
@@ -1015,6 +1013,17 @@ TNT:
         damageMulti: 0.45
 水晶碎块:
     liveTime: 10
+诅咒弹:
+    gravity: 0
+    buffInflict:
+        - "咒火|140|1"
+毒液弹:
+    gravity: 0
+    buffInflict:
+        - "剧毒|200|1"
+夜明弹:
+    gravity: 0
+    penetration: 99
 装饰:
     clusterBomb:
         amount: 8
@@ -1061,6 +1070,54 @@ TNT:
 螺丝钉:
     noGravityTicks: 0
     liveTime: 60
+水之剑气:
+    gravity: 0
+    projectileSize: 0.25
+    trailColor: "148|255|255"
+    trailSize: 0.1
+    trailStepSize: 0.5
+    liveTime: 60
+阴暗球:
+    noGravityTicks: 0
+    projectileSize: 0.25
+    blockHitAction: stick
+    isGrenade: true
+    blastRadius: 1
+    liveTime: 80
+旋风:
+    projectileSize: 0.5
+    gravity: 0
+    penetration: 1
+    liveTime: 50
+凝胶波:
+    projectileSize: 0.5
+    gravity: 0
+    penetration: 1
+    liveTime: 75
+阿米迪亚斯漩涡:
+    projectileSize: 0.5
+    autoTrace: true
+    gravity: 0
+    blockHitAction: thru
+    liveTime: 75
+信风羽:
+    gravity: 0
+    liveTime: 50
+涡流:
+    projectileSize: 0.5
+    gravity: 0
+    blockHitAction: thru
+    isGrenade: true
+    blastRadius: 3.5
+    liveTime: 20
+血之镰刀:
+    projectileSize: 0.5
+    autoTrace: true
+    autoTraceRadius: 25
+    speedMultiPerTick: 0.95
+    gravity: 0
+    blockHitAction: thru
+    liveTime: 30
 星云烈焰:
     gravity: 0
     autoTrace: true
